docs: Update README and project metadata for Ekistia agricultural platform
- Complete README rewrite for agricultural intelligence platform
- Add comprehensive feature documentation and technical architecture
- Update package.json with proper project name, description, and version
- Remove outdated pothole management references
- Add proper meta tags for social sharing and SEO
- Clean up unused logo files and development documentation
- Remove unused components (AlphaEarthLayerControl, geminiService)
- Remove outdated feature documentation files
- Clean up Python cache files

The README now accurately reflects Ekistia's capabilities as a comprehensive agricultural intelligence platform with 3D mapping, hazard analysis, and land management tools.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "ekistia",
+  "description": "Agricultural Intelligence Platform for Iligan City - Advanced 3D mapping with hazard analysis and crop suitability visualization",
+  "version": "1.0.0",
+  "author": "Ekistia Team",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
