--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,6 @@
   "outputDirectory": "dist",
   "framework": "vite",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "env": {
-    "VITE_MAPBOX_TOKEN": "@mapbox_token",
-    "VITE_SUPABASE_URL": "@supabase_url",
-    "VITE_SUPABASE_ANON_KEY": "@supabase_anon_key"
-  },
-  "build": {
-    "env": {
-      "VITE_MAPBOX_TOKEN": "@mapbox_token",
-      "VITE_SUPABASE_URL": "@supabase_url",
-      "VITE_SUPABASE_ANON_KEY": "@supabase_anon_key"
-    }
-  }
+  "devCommand": "npm run dev"
 }
 
