--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
+        },
+        {
+          "key": "Content-Encoding",
+          "value": "gzip"
         }
       ]
     },
@@ -24,6 +28,10 @@
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
+        },
+        {
+          "key": "Accept-Encoding",
+          "value": "gzip, deflate, br"
         }
       ]
     }
